--- a/smartchUWP/App.xaml
+++ b/smartchUWP/App.xaml
@@ -3,6 +3,14 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:smartchUWP"
+    xmlns:vm1="using:ViewModel"
     RequestedTheme="Light">
-
+    <Application.Resources>
+       
+        <DataTemplate x:Key="WeatherTemplate1">
+           
+         
+        </DataTemplate>
+    </Application.Resources>
+    
 </Application>
