--- a/smartchUWP/App.xaml
+++ b/smartchUWP/App.xaml
@@ -3,10 +3,10 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:smartchUWP"
-    xmlns:vm1="using:ViewModel"
+    xmlns:vm1="using:smartchUWP.ViewModel"
     RequestedTheme="Light">
     <Application.Resources>
-       
+        <vm1:ViewModelLocator x:Key="Locator" xmlns:vm="using:smartchUWP.ViewModel"/>
         <DataTemplate x:Key="WeatherTemplate1">
            
          
