--- a/smartchUWP/Clubs.xaml
+++ b/smartchUWP/Clubs.xaml
@@ -1,15 +1,27 @@
 ﻿<Page
-    x:Class="smartchUWP.clubs"
+    x:Class="smartchUWP.Clubs"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:smartchUWP"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d">
+    mc:Ignorable="d"
+    DataContext="{Binding Source={StaticResource Locator}, Path=Clubs}"
+    >
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
-        <TextBlock Text="Mes clubs" Style="{StaticResource TitleTextBlockStyle}"/>
+        
         <ListView ItemsSource="{Binding Clubs}" ItemTemplate="{StaticResource WeatherTemplate1}"/>
+
+
+        <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
+            <TextBlock Text="Ajouter un club" Style="{StaticResource TitleTextBlockStyle}"/>
+            <TextBlock Name="TextErreur" Text="Erreur lors de la création" Visibility="Collapsed" />
+            <TextBox x:Name="ClubName" Header="Name" Margin="0,24,0,0" MaxLength="50" Width="400" HorizontalAlignment="Left"  />
+            
+            <Button Content="Ajouter" Margin="0,24" Click="AddClub_click"/>
+            
+        </StackPanel>
     </Grid>
 </Page>
