--- a/smartchUWP/View/Clubs/AddClub.xaml
+++ b/smartchUWP/View/Clubs/AddClub.xaml
@@ -1,18 +1,18 @@
 ﻿<Page
-    x:Class="smartchUWP.Clubs"
+    x:Class="smartchUWP.View.Clubs.AddClub"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:smartchUWP"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
-    DataContext="{Binding Source={StaticResource Locator}, Path=Clubs}"
+    
     >
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
         
-        <ListView ItemsSource="{Binding Clubs}" ItemTemplate="{StaticResource WeatherTemplate1}"/>
+        
 
 
         <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
