Correction pour mvvm Mise a jour des donnée grace a messenger Utilisation des viewModel grace au command pour toutes les action Meilleurs utilisation du binding Ajout de class Observable pour certain objets Mise en place d'un navigationServie perso Ajout du MainPageViewModel

--- a/smartchUWP/App.xaml
+++ b/smartchUWP/App.xaml
@@ -3,10 +3,14 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:smartchUWP"
+    xmlns:conv="using:smartchUWP.Converters" 
     xmlns:vm1="using:smartchUWP.ViewModel"
     RequestedTheme="Light">
     <Application.Resources>
+        <conv:DateTimeConverter x:Name="DateTimeToDateConverter"/>
+        <conv:DateTimeToDateTimeOffsetConverter x:Name="DateTimeToDateTimeOffsetConverter"/>
         <vm1:ViewModelLocator x:Key="Locator" xmlns:vm="using:smartchUWP.ViewModel"/>
+        
         <DataTemplate x:Key="ClubsList">
             <Grid>
                 <TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="{Binding Name}" VerticalAlignment="Center"/>
