--- a/smartchUWP/View/MainPage.xaml
+++ b/smartchUWP/View/MainPage.xaml
@@ -2,16 +2,23 @@
     x:Class="smartchUWP.View.MainPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:interactivity="using:Microsoft.Xaml.Interactivity"
+    xmlns:core="using:Microsoft.Xaml.Interactions.Core" 
     xmlns:local="using:smartchUWP"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    DataContext="{Binding Source={StaticResource Locator} , Path=MainPage}"
     mc:Ignorable="d">
 
-    <NavigationView x:Name="NavView"
-                    ItemInvoked="NavView_ItemInvoked"
-                    SelectionChanged="NavView_SelectionChanged"
-                    Loaded="NavView_Loaded">
-
+    <NavigationView x:Name="NavView" Loaded="NavView_Loaded">
+        <interactivity:Interaction.Behaviors>
+            <core:EventTriggerBehavior EventName="ItemInvoked">
+                <core:InvokeCommandAction Command="{Binding CommandInvokedMenu}" />
+            </core:EventTriggerBehavior>
+            <core:EventTriggerBehavior EventName="SelectionChanged" >
+                <core:InvokeCommandAction Command="{Binding CommandSelectChangeMenu}"  />
+            </core:EventTriggerBehavior>
+        </interactivity:Interaction.Behaviors>
         <NavigationView.MenuItems>
             <NavigationViewItem Content="Home" Tag="home">
                 <NavigationViewItem.Icon>
@@ -60,7 +67,7 @@
                              Margin="12,0"/>
         </NavigationView.PaneFooter>
 
-        <Frame x:Name="ContentFrame" Margin="24">
+        <Frame Content="{Binding ContentPage}" x:Name="ContentFrame"  Margin="24">
             <Frame.ContentTransitions>
                 <TransitionCollection>
                     <NavigationThemeTransition/>
