--- a/smartchUWP/App.xaml
+++ b/smartchUWP/App.xaml
@@ -7,15 +7,22 @@
     xmlns:vm1="using:smartchUWP.ViewModel"
     RequestedTheme="Light">
     <Application.Resources>
+        
+            <SolidColorBrush Color="#cc6600" x:Key="border"/>
+        
         <conv:DateTimeConverter x:Name="DateTimeToDateConverter"/>
+        <conv:DateTimeToAgeConverter x:Name="DateTimeToAgeConverter"/>
         <conv:DateTimeToDateTimeOffsetConverter x:Name="DateTimeToDateTimeOffsetConverter"/>
         <conv:TournamentStatesConverter x:Name="TournamentStatesConverter"/>
         <vm1:ViewModelLocator x:Key="Locator" xmlns:vm="using:smartchUWP.ViewModel"/>
-        
+
         <DataTemplate x:Key="ClubsList">
-            <Grid>
-                <TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="{Binding Name}" VerticalAlignment="Center"/>
-            </Grid>
+            <StackPanel Orientation="Horizontal">
+
+                <TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="{Binding Name}" VerticalAlignment="Center" Padding="0,0,10,0"/>
+                
+                <TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="{Binding FirstName}" VerticalAlignment="Center"/>
+            </StackPanel>
         </DataTemplate>
     </Application.Resources>
     
