--- a/smartchUWP/View/Membres/AddMembre.xaml
+++ b/smartchUWP/View/Membres/AddMembre.xaml
@@ -3,46 +3,35 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:smartchUWP"
+    xmlns:view="using:smartchUWP.View"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     DataContext="{Binding Source={StaticResource Locator}, Path=AddMembre}"
     mc:Ignorable="d">
 
-    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="Auto"/>
-            <ColumnDefinition Width="*"/>
-        </Grid.ColumnDefinitions>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="*"/>
-        </Grid.RowDefinitions>
-        <TextBlock Text="Ajouter un membres" Style="{StaticResource TitleTextBlockStyle}"/>
-        <StackPanel Grid.Row="1">
-            
-            <TextBox Header="Nom" Name="Name"/>
-            <TextBox Header="Prénom" Name="FirstName"/>
-            <TextBox Header="Email" Name="Email"/>
-            <TextBox Header="Téléphone" Name="Phone"/>
-            <DatePicker Header="Date de naissance" Name="Birthday"/>
-        </StackPanel>
-        <StackPanel Grid.Row="1" Grid.Column="1">
-            <TextBlock Text="Adresse"/>
-            <TextBox Header="Rue" Name="Street"/>
-            <TextBox Header="Numéro" Name="Number"/>
-            <TextBox Header="Boite" Name="Box"/>
-            <TextBox Header="Ville" Name="City"/>
-            <TextBox Header="Code Postal" Name="Zipcode"/>
-            
-        </StackPanel>
-        <StackPanel  Grid.Row="2">
-            <TextBlock Text="Club"  Height="45"/>
-            <ListBox SelectionMode="Multiple"   ItemsSource="{Binding Clubs}" ItemTemplate="{StaticResource ClubsList}"  />
-        </StackPanel>
-        <StackPanel Grid.Row="3">
-            <Button Name="AjouterButton" Content="Ajouter" Click="AjouterMembre_Click"/>
-        </StackPanel>
-    </Grid>
+    <StackPanel Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+            <TextBlock Text="Ajouter un membre" Style="{StaticResource TitleTextBlockStyle}"/>
+            <Button Grid.Column="1" Name="AjouterButton" Content="Ajouter" Command="{Binding CommandAddMember}"/>
+        </Grid>
+        <Pivot>
+            <PivotItem Header="Infos générales">
+                <StackPanel >
+                    <TextBox Header="Nom"  Text="{Binding User.Name, Mode=TwoWay}"/>
+                    <TextBox Header="Prénom" Text="{Binding User.FirstName, Mode=TwoWay}"/>
+                    <TextBox Header="Email" Text="{Binding User.Email, Mode=TwoWay}"/>
+                    <TextBox Header="Téléphone"  Text="{Binding User.Phone, Mode=TwoWay}"/>
+                    <DatePicker Header="Date de naissance"  Date="{Binding User.Birthday, Converter={StaticResource DateTimeToDateTimeOffsetConverter}, Mode=TwoWay}"/>
+                </StackPanel>
+            </PivotItem>
+            <PivotItem Header="Adresse">
+                <Frame  SourcePageType="view:AdresseForm" DataContext="{Binding User.Adresse, Mode=TwoWay}"/>
+            </PivotItem>
+        </Pivot>
+
+    </StackPanel>
 </Page>
