--- a/smartchUWP/View/Membres/Membres.xaml
+++ b/smartchUWP/View/Membres/Membres.xaml
@@ -10,29 +10,49 @@
 
     <Grid  HorizontalAlignment="Stretch" Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="Auto"/>
+            <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-        <TextBlock Grid.Column="0" HorizontalAlignment="Left" Text="Tous les membres de mes clubs" Style="{StaticResource TitleTextBlockStyle}"/>
-        <Button Grid.Column="1" HorizontalAlignment="Right" Content="Ajouter" Click="AddMembre_Click"/>
-        <ListView ItemsSource="{Binding Users}" Name="ListeClub" ItemTemplate="{StaticResource ClubsList}" Grid.Row="1" Width="200" Padding="20" Margin="0,30,0,0"/>
-        <StackPanel Orientation="Vertical"  Grid.Column="1" Grid.Row="1" DataContext="{Binding ElementName=ListeClub,Path=SelectedItem}" Padding="20" Margin="0,30,0,0">
-            <StackPanel Orientation="Horizontal">
-                <TextBlock Text="Nom : "/>
-                <TextBlock  Text="{Binding Name}"/>
-            </StackPanel>
-            <StackPanel Orientation="Horizontal">
-                <TextBlock Text="Email de contact : "/>
-                <TextBlock Text="{Binding Email}" />
-            </StackPanel>
-            <StackPanel Orientation="Horizontal">
-                <TextBlock Text="Téléphone : "/>
-                <TextBlock Text="{Binding Phone}"/>
-            </StackPanel>
+        <TextBlock Grid.Column="0" HorizontalAlignment="Left" Text="Mon carnet d'adresses" Style="{StaticResource TitleTextBlockStyle}"/>
+        <Button Grid.Column="1" HorizontalAlignment="Right" Content="Ajouter" Command="{Binding CmdNavigateAddMembre}"/>
+        <Border Grid.Row="1" BorderBrush="{StaticResource border}" BorderThickness="0,0,2,0">
+            <ListView ItemsSource="{Binding Users}" Name="ListeMembre" ItemTemplate="{StaticResource ClubsList}"   Padding="20" Margin="0,30,30,0"/>
+        </Border>
+        <StackPanel Orientation="Vertical"  Grid.Column="1" Grid.Row="1" DataContext="{Binding ElementName=ListeMembre,Path=SelectedItem}" Padding="20" Margin="0,30,20,0">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="2*"/>
+                    <ColumnDefinition Width="2*"/>
+                </Grid.ColumnDefinitions>
+                <Image Source="ms-appx:///Assets/images/user.jpg" />
+                <StackPanel Grid.Column="1">
+                    <TextBlock  Text="{Binding Name}"/>
+                    <TextBlock  Text="{Binding FirstName}"/>
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock  Text="{Binding Birthday, Converter={StaticResource DateTimeToAgeConverter}}"/>
+                        <TextBlock Text=" ans"/>
+                    </StackPanel>
+                </StackPanel>
+                <StackPanel Grid.Column="2">
+                    <TextBlock Text="{Binding Email}" />
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock Text="{Binding Adresse.Street}"/>
+                        <TextBlock Text=", "/>
+                        <TextBlock Text="{Binding Adresse.Number}"/>
+                    </StackPanel>
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock Text="{Binding Adresse.Zipcode}"/>
+                        <TextBlock Text=" "/>
+                        <TextBlock Text="{Binding Adresse.City}"/>
+                    </StackPanel>
+                    <TextBlock Text="{Binding Phone}"/>
+                </StackPanel>
+            </Grid>
         </StackPanel>
     </Grid>
 </Page>
